Add Limbus Company Grinding Calculator project
Added description for Limbus Company Grinding Calculator.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h1>My Projects</h1>
+
+<p><a href="https://itsmalikx.github.io/limbusGrindingCalculator.html">Limbus Company Grinding Calculator</a> is a lightweight, HTML webpage that helps Limbus Company players set shard goals and instantly calculate the Mirror Dungeon runs, enkephalin modules, lunacy, and timeframe required; complete with adjustable game parameters for precise planning.</p>
 <p><a href="https://itsmalikx.github.io/boxfindertool.html">Box Finder Tool</a> is a lightweight HTML webpage designed to help you identify the most suitable box for your customers' needs.</p>
+
 <p>&nbsp;</p>
