--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <p><a href="https://itsmalikx.github.io/limbusGrindingCalculator.html">Limbus Company Grinding Calculator</a> is a lightweight HTML webpage that helps Limbus Company players set shard goals and instantly calculate the Mirror Dungeon runs, enkephalin modules, lunacy, and timeframe required, complete with adjustable game parameters for precise planning.</p>
 <p><a href="https://itsmalikx.github.io/boxfindertool.html">Box Finder Tool</a> is a lightweight HTML webpage designed to help you identify the most suitable box for your customers' needs.</p>
+<p><a href="https://itsmalikx.github.io/indexCardCreator.html">Index Card Creator</a> is a lightweight HTML webpage that lets you design printable 3x5 notecards with separate front/back editing, rich-text formatting, and resizable split layouts so you can organize multiple “blocks” of content on a single card, then Print/Save as PDF.</p>
 
 <p>&nbsp;</p>
+
 
